--- a/frontend/src/profile/profile.css
+++ b/frontend/src/profile/profile.css
@@ -194,7 +194,7 @@
 }
 
 .card.hovercard .cardheader {
-    background: url("https://webcomicms.net/sites/default/files/clipart/163569/rainy-day-picture-163569-4893460.jpg");
+    background-image: url("https://neptunescovebelize.com/cms/wp-content/uploads/2017/08/package-header-02.jpg");
     background-size: cover;
     height: 300px;
 }
