--- a/frontend/src/HomePage/homepage.css
+++ b/frontend/src/HomePage/homepage.css
@@ -2,7 +2,8 @@ div.backGraound{
  
     width: 100%;
     margin: 0 auto;
-    background-image: url("https://belizedivingservices.com/wp-content/uploads/coral-reefs-featured.jpg");
+   
+    background-image: url("https://ambergrisdivers.com/wp-content/uploads/2018/11/padi-open-water-diver-course-990x490.jpg");
     height: 750px;
   background-position: center;
   background-repeat: no-repeat;
