--- a/views/Courses/edit.ejs
+++ b/views/Courses/edit.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>Edit courses</h2>
-    <form action="/corses/edit/<%=course._id%>?_method=PUT" method="POST">
+    <form action="/edit/<%=course._id%>?_method=PUT" method="POST">
         title: <input type="text" name="CourseTitle"  value="<%=course.CourseTitle%>" /><br/>
         Description: <input type="text" name="Description" value="<%=course.Description%>" /><br/>
         Price: <input type="text" name="Price" value="<%=course.Price%>" /><br/>
